--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,14 +8,16 @@
         "email": "henryheng@flowiseai.com"
     },
     "dependencies": {
+        "@auth0/auth0-react": "^2.2.4",
         "@codemirror/lang-javascript": "^6.2.1",
         "@codemirror/lang-json": "^6.0.1",
         "@codemirror/view": "^6.22.3",
         "@emotion/cache": "^11.4.0",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
-        "@auth0/auth0-react": "^2.2.4",
+
         "@mui/base": "5.0.0-beta.40",
+        "@mdxeditor/editor": "^3.11.0",
         "@mui/icons-material": "5.0.3",
         "@mui/lab": "5.0.0-alpha.156",
         "@mui/material": "5.15.0",
@@ -24,12 +26,12 @@
         "@uiw/codemirror-theme-sublime": "^4.21.21",
         "@uiw/codemirror-theme-vscode": "^4.21.21",
         "@uiw/react-codemirror": "^4.21.21",
+        "aai-embed": "workspace:*",
+        "aai-embed-react": "workspace:*",
         "axios": "1.6.2",
         "clsx": "^1.1.1",
         "dotenv": "^16.0.0",
         "flagsmith": "^4.0.3",
-        "aai-embed": "workspace:*",
-        "aai-embed-react": "workspace:*",
         "flowise-react-json-view": "*",
         "formik": "^2.2.6",
         "framer-motion": "^4.1.13",
