--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -9,7 +9,19 @@
             "@utils/*": ["../../packages-answers/utils/src/*"],
             "@ui/*": ["../../packages-answers/ui/src/*"],
             "@db/*": ["../../packages-answers/db/src/*"],
-            "@/*": ["../../packages/ui/src/*"]
+            "@/views/*": ["../../packages/ui/src/views/*"],
+            "@/layout/*": ["../../packages/ui/src/layout/*"],
+            "@/utils/*": ["../../packages/ui/src/utils/*"],
+            "@/api/*": ["../../packages/ui/src/api/*"],
+            "@/assets/*": ["../../packages/ui/src/assets/*"],
+            "@/hooks/*": ["../../packages/ui/src/hooks/*"],
+            "@/menu-items": ["../../packages/ui/src/menu-items"],
+            "@/menu-items/*": ["../../packages/ui/src/menu-items/*"],
+            "@/store/*": ["../../packages/ui/src/store/*"],
+            "@/store": ["../../packages/ui/src/store"],
+            "@/themes": ["../../packages/ui/src/themes"],
+            "@/config": ["../../packages/ui/src/config"],
+            "@/ui-component/*": ["../../packages/ui/src/ui-component/*"]
         },
         "plugins": [
             {
