--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "build": "tsc && gulp",
         "dev:gulp": "gulp",
-        "not:dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"pnpm dev:gulp\"",
+        "dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"pnpm dev:gulp\"",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "clean": "rimraf dist",
         "nuke": "rimraf dist node_modules .turbo"
