Update variables for organizations

--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,7 @@
         },
         "test": {},
         "dev": {
+            "dependsOn": ["^build"],
             "cache": false
         },
         "typeorm:migration-run": {
