--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "aai-embed": "workspace:*",
         "flowise-ui": "workspace:*",
         "jose": "^5.2.3",
         "@auth0/nextjs-auth0": "^3.5.0",
