--- a/packages/embed-react/package.json
+++ b/packages/embed-react/package.json
@@ -34,7 +34,7 @@
         "typescript": "5.0.3"
     },
     "peerDependencies": {
-        "aai-embed": "workspace:*",
+        "aai-embed": "^1.3.14",
         "react": "18.x"
     }
 }
