--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "aai-embed": "^1.3.14",
+        "aai-embed": "workspace:*",
         "flowise-ui": "workspace:*",
         "jose": "^5.2.3",
         "@auth0/nextjs-auth0": "^3.5.0",
