--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -76,6 +76,7 @@
         "typescript": "^4.8.4",
         "webpack": "^5.88.2",
         "webpack-cli": "^5.1.4",
-        "webpack-node-externals": "^3.0.0"
+        "webpack-node-externals": "^3.0.0",
+        "file-loader": "^6.2.0"
     }
 }
