--- a/copilot/flowise/manifest.yml
+++ b/copilot/flowise/manifest.yml
@@ -12,7 +12,7 @@ http:
     # To match all requests you can use the "/" path.
     path: '/'
     # You can specify a custom health check path. The default is "/".
-    # healthcheck: '/'
+    healthcheck: '/api/v1/ping'
     alias: ${COPILOT_ENVIRONMENT_NAME}.flowise.theanswer.ai
 
 # Configuration for your containers and service.
