--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -61,11 +61,11 @@
         "@types/uuid": "^9.0.7",
         "async-mutex": "^0.4.0",
         "axios": "1.6.2",
+        "body-parser": "^1.20.3",
         "content-disposition": "0.5.4",
         "contentful-management": "^11.7.3",
         "cors": "^2.8.5",
         "crypto-js": "^4.1.1",
-        "langchainhub": "^0.0.11",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "express-basic-auth": "^1.2.1",
