--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -46,7 +46,8 @@
         "test:api": "jest test/api",
         "test:api:watch": "jest test/api --watch",
         "test:billing": "jest src/services/billing/__tests__/*.test.ts",
-        "test:billing:watch": "jest src/services/billing/__tests__/*.test.ts --watch"
+        "test:billing:watch": "jest src/services/billing/__tests__/*.test.ts --watch",
+        "test:auth": "mocha -r ts-node/register test/auth/**/*.test.ts --timeout 10000"
     },
     "keywords": [],
     "homepage": "https://flowiseai.com",
@@ -108,18 +109,23 @@
     "devDependencies": {
         "@jest/globals": "^29.7.0",
         "@jest/types": "^29.6.3",
+        "@types/chai": "^4.3.0",
         "@types/content-disposition": "0.5.8",
         "@types/cors": "^2.8.12",
         "@types/crypto-js": "^4.1.1",
+        "@types/express": "^4.17.13",
         "@types/express-session": "^1.18.1",
         "@types/jest": "^29.5.12",
+        "@types/mocha": "^10.0.6",
         "@types/multer": "^1.4.7",
         "@types/passport": "^1.0.17",
         "@types/passport-google-oauth20": "^2.0.16",
         "@types/sanitize-html": "^2.9.5",
+        "chai": "^4.3.4",
         "concurrently": "^7.1.0",
         "cypress": "^13.13.0",
         "jest": "^29.7.0",
+        "mocha": "^10.3.0",
         "nodemon": "^2.0.22",
         "oclif": "^3",
         "rimraf": "^5.0.5",
