chore: update dependencies and dev configuration

--- a/packages-answers/ui/package.json
+++ b/packages-answers/ui/package.json
@@ -6,7 +6,7 @@
     "sideEffects": false,
     "scripts": {
         "lint": "eslint \"src/**/*.ts*\"",
-        "test": "jest"
+        "not:test": "jest"
     },
     "jest": {
         "preset": "jest-presets/jest/node"
