--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -66,6 +66,7 @@
         "@modelcontextprotocol/server-github": "^2025.1.23",
         "@modelcontextprotocol/server-postgres": "^0.6.2",
         "@modelcontextprotocol/server-slack": "^2025.1.17",
+        "@aai-modelcontextprotocol/server-jira": "workspace:*",
         "@notionhq/client": "^2.2.8",
         "@opensearch-project/opensearch": "^1.2.0",
         "@pinecone-database/pinecone": "4.0.0",
