Fix template literals in experimental-prisma-webpack-plugin

--- a/packages-answers/experimental-prisma-webpack-plugin/package.json
+++ b/packages-answers/experimental-prisma-webpack-plugin/package.json
@@ -6,6 +6,9 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
+    "dependencies": {
+        "@answers/logger": "*"
+    },
     "devDependencies": {
         "webpack": "^5.88.2"
     },
