--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
         "@cypress/react18": "^2.0.0",
         "@types/express": "^4.17.13",
         "@typescript-eslint/typescript-estree": "^7.13.1",
+        "bws-secure": "^0.1.5",
+        "cursor-tools": "latest",
         "cypress": "^12.17.1",
         "dotenv-cli": "latest",
         "eslint": "^8.24.0",
@@ -76,8 +78,7 @@
         "rimraf": "^3.0.2",
         "run-script-os": "^1.1.6",
         "turbo": "1.10.16",
-        "typescript": "^5.4.5",
-        "cursor-tools": "latest"
+        "typescript": "^5.4.5"
     },
     "dependencies": {
         "@types/node-cron": "^3.0.11",
