Refactor package.json scripts to use secure-run for enhanced security in environment variable handling

--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
         "apps/desktop"
     ],
     "scripts": {
-        "build": "dotenv -- turbo run build ",
+        "build": "secure-run -- turbo run build ",
         "build-force": "pnpm clean && turbo run build --force",
-        "dev": "dotenv -- turbo run dev dev-docker",
+        "dev": "secure-run -- turbo run dev dev-docker",
         "dev-docker": "docker-compose  -f \"./docker-compose.dev.yml\" up -d",
-        "start": "dotenv -- pnpm turbo run start",
+        "start": "secure-run -- pnpm turbo run start",
         "start:windows": "cd packages/server/bin && run start",
         "start:default": "cd packages/server/bin && ./run start",
         "start-worker": "run-script-os",
@@ -32,16 +32,16 @@
         "quick": "pretty-quick --staged",
         "postinstall": "husky install",
         "migration:generate": "turbo typeorm:migration-generate",
-        "migration:run": "npx dotenv -- turbo typeorm:migration-run",
-        "migration:show": "npx dotenv -- turbo typeorm:migration-show",
-        "db": "dotenv -- pnpm --filter db prisma",
-        "db:healthcheck": "dotenv -- wait-on tcp:localhost:5432",
-        "db:migrate": "dotenv -- pnpm db migrate dev",
-        "db:deploy": "dotenv -- pnpm db migrate deploy",
-        "db:reset": "dotenv -- pnpm db migrate reset",
-        "db:run:script": "dotenv -- pnpm --filter db run:script",
-        "db:studio": "dotenv -- pnpm db studio",
-        "db:seed": "dotenv -- pnpm db db seed",
+        "migration:run": "npx secure-run -- turbo typeorm:migration-run",
+        "migration:show": "npx secure-run -- turbo typeorm:migration-show",
+        "db": "secure-run -- pnpm --filter db prisma",
+        "db:healthcheck": "secure-run -- wait-on tcp:localhost:5432",
+        "db:migrate": "secure-run -- pnpm db migrate dev",
+        "db:deploy": "secure-run -- pnpm db migrate deploy",
+        "db:reset": "secure-run -- pnpm db migrate reset",
+        "db:run:script": "secure-run -- pnpm --filter db run:script",
+        "db:studio": "secure-run -- pnpm db studio",
+        "db:seed": "secure-run -- pnpm db db seed",
         "test": "pnpm turbo run test:auth",
         "test:e2e": "pnpm cypress run",
         "test:cmp": "pnpm cypress run --component",
