--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -76,6 +76,7 @@
         "@opensearch-project/opensearch": "^1.2.0",
         "@pinecone-database/pinecone": "4.0.0",
         "@qdrant/js-client-rest": "^1.9.0",
+        "@shinzo-labs/hubspot-mcp": "^1.0.0",
         "@stripe/agent-toolkit": "^0.1.20",
         "@supabase/supabase-js": "^2.29.0",
         "@tsmztech/mcp-server-salesforce": "^0.0.2",
