--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,8 @@ jobs:
               uses: cypress-io/github-action@v6
               with:
                   install: false
-                  working-directory: packages/server
-                  start: pnpm start
+                  working-directory: ./
+                  start: pnpm start --filter web --filter flowise
                   wait-on: 'http://localhost:3000'
                   wait-on-timeout: 120
                   browser: chrome
