--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -66,6 +66,7 @@
         "@aws-sdk/client-secrets-manager": "^3.699.0",
         "@aws-sdk/s3-request-presigner": "^3.699.0",
         "@contentful/rich-text-from-markdown": "^15.16.15",
+        "@giorgosavgeris/passport-zoom-oauth2": "^1.2.0",
         "@google-cloud/logging-winston": "^6.0.0",
         "@oclif/core": "4.0.7",
         "@opentelemetry/api": "1.9.0",
@@ -149,10 +150,11 @@
         "@types/lodash": "^4.17.19",
         "@types/mailparser": "^3.4.5",
         "@types/mocha": "^10.0.6",
-        "@types/multer-s3": "^3.0.3",
         "@types/multer": "^1.4.7",
-        "@types/passport-google-oauth20": "^2.0.16",
+        "@types/multer-s3": "^3.0.3",
         "@types/passport": "^1.0.17",
+        "@types/passport-google-oauth20": "^2.0.16",
+        "@types/passport-strategy": "^0.2.38",
         "@types/pdf-parse": "^1.1.4",
         "@types/sanitize-html": "^2.9.5",
         "@types/turndown": "^5.0.5",
