--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -63,11 +63,11 @@
     },
     "license": "SEE LICENSE IN LICENSE.md",
     "dependencies": {
-        "@aws-sdk/client-secrets-manager": "^3.859.0",
-        "@aws-sdk/s3-request-presigner": "^3.859.0",
-        "@braintree/sanitize-url": "^7.1.1",
-        "@contentful/rich-text-from-markdown": "^15.18.10",
-        "@google-cloud/logging-winston": "^6.0.1",
+        "@aws-sdk/client-secrets-manager": "^3.699.0",
+        "@aws-sdk/s3-request-presigner": "^3.699.0",
+        "@contentful/rich-text-from-markdown": "^15.16.15",
+        "@giorgosavgeris/passport-zoom-oauth2": "^1.2.0",
+        "@google-cloud/logging-winston": "^6.0.0",
         "@oclif/core": "4.0.7",
         "@opentelemetry/api": "1.9.0",
         "@opentelemetry/auto-instrumentations-node": "0.60.1",
@@ -83,26 +83,25 @@
         "@opentelemetry/sdk-node": "0.57.2",
         "@opentelemetry/sdk-trace-base": "1.30.1",
         "@opentelemetry/semantic-conventions": "1.30.0",
-        "async-mutex": "^0.4.1",
-        "axios": "1.8.2",
+        "async-mutex": "^0.4.0",
+        "axios": "1.7.9",
         "bull-board": "^2.1.3",
-        "bullmq": "^5.56.9",
-        "connect-redis": "^8.1.0",
+        "bullmq": "^5.42.0",
+        "connect-redis": "^8.0.2",
         "content-disposition": "0.5.4",
-        "contentful-management": "^11.54.4",
+        "contentful-management": "^11.7.3",
         "cors": "^2.8.5",
-        "crypto-js": "^4.2.0",
+        "crypto-js": "^4.1.1",
         "csv-parse": "^5.6.0",
-        "dotenv": "^16.6.1",
-        "express": "^4.21.2",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.1",
         "express-basic-auth": "^1.2.1",
-        "express-oauth2-jwt-bearer": "^1.6.1",
-        "express-rate-limit": "^6.11.2",
-        "express-session": "^1.18.2",
+        "express-oauth2-jwt-bearer": "^1.6.0",
+        "express-rate-limit": "^6.9.0",
+        "express-session": "^1.18.1",
         "flowise-components": "workspace:*",
-        "flowise-nim-container-manager": "^1.0.11",
         "global-agent": "^3.0.0",
-        "google-auth-library": "^9.15.1",
+        "google-auth-library": "^9.4.0",
         "googleapis": "^144.0.0",
         "http-errors": "^2.0.0",
         "http-status-codes": "^2.3.0",
@@ -110,73 +109,72 @@
         "langfuse": "3.37.6",
         "langfuse-core": "3.37.6",
         "lodash": "^4.17.21",
-        "mailparser": "^3.7.4",
-        "mammoth": "^1.10.0",
-        "moment": "^2.30.1",
-        "moment-timezone": "^0.5.48",
-        "multer": "^2.0.2",
-        "multer-cloud-storage": "^4.1.0",
+        "mailparser": "^3.7.2",
+        "mammoth": "^1.9.0",
+        "moment": "^2.29.4",
+        "moment-timezone": "^0.5.34",
+        "multer": "^1.4.5-lts.1",
+        "multer-cloud-storage": "^4.0.0",
         "multer-s3": "^3.0.1",
-        "mysql2": "^3.14.3",
-        "nim-container-manager": "^1.0.5",
+        "mysql2": "^3.11.3",
+        "nim-container-manager": "^1.0.4",
         "openai": "4.96.0",
         "passport": "^0.7.0",
-        "passport-custom": "^1.1.1",
         "passport-google-oauth20": "^2.0.0",
-        "passport-oauth2": "^1.8.0",
-        "pg": "^8.16.3",
-        "posthog-node": "^3.6.3",
+        "flowise-nim-container-manager": "^1.0.11",
+        "pg": "^8.11.2",
+        "posthog-node": "^3.5.0",
         "prom-client": "^15.1.3",
-        "rate-limit-redis": "^4.2.1",
-        "reflect-metadata": "^0.1.14",
-        "s3-streamlogger": "^1.11.1",
-        "sanitize-html": "^2.17.0",
-        "socket.io": "^4.8.1",
-        "sqlite3": "^5.1.7",
-        "stripe": "^17.7.0",
+        "rate-limit-redis": "^4.2.0",
+        "reflect-metadata": "^0.1.13",
+        "s3-streamlogger": "^1.11.0",
+        "sanitize-html": "^2.11.0",
+        "socket.io": "^4.6.1",
+        "sqlite3": "^5.1.6",
+        "stripe": "^17.6.0",
         "turndown": "^7.2.0",
-        "typeorm": "^0.3.25",
+        "typeorm": "^0.3.17",
         "uuid": "^9.0.1",
-        "winston": "^3.17.0"
+        "winston": "^3.9.0"
     },
     "devDependencies": {
         "@jest/globals": "^29.7.0",
         "@jest/types": "^29.6.3",
-        "@types/chai": "^4.3.20",
+        "@types/chai": "^4.3.0",
         "@types/content-disposition": "0.5.8",
-        "@types/cors": "^2.8.19",
-        "@types/crypto-js": "^4.2.2",
-        "@types/express": "^4.17.23",
-        "@types/express-session": "^1.18.2",
-        "@types/jest": "^29.5.14",
-        "@types/lodash": "^4.17.20",
-        "@types/mailparser": "^3.4.6",
-        "@types/mocha": "^10.0.10",
-        "@types/multer": "^2.0.0",
+        "@types/cors": "^2.8.18",
+        "@types/crypto-js": "^4.1.1",
+        "@types/express-session": "^1.18.1",
+        "@types/express": "^4.17.13",
+        "@types/jest": "^29.5.12",
+        "@types/lodash": "^4.17.19",
+        "@types/mailparser": "^3.4.5",
+        "@types/mocha": "^10.0.6",
+        "@types/multer": "^1.4.7",
         "@types/multer-s3": "^3.0.3",
         "@types/passport": "^1.0.17",
         "@types/passport-google-oauth20": "^2.0.16",
-        "@types/passport-oauth2": "^1.8.0",
-        "@types/pdf-parse": "^1.1.5",
-        "@types/sanitize-html": "^2.16.0",
+        "@types/passport-strategy": "^0.2.38",
+        "@types/pdf-parse": "^1.1.4",
+        "@types/sanitize-html": "^2.9.5",
         "@types/turndown": "^5.0.5",
-        "@types/uuid": "^9.0.8",
-        "chai": "^4.5.0",
+        "@types/uuid": "^9.0.7",
+        "chai": "^4.3.4",
         "concurrently": "^7.6.0",
         "cross-env": "^7.0.3",
-        "cypress": "^13.17.0",
+        "cypress": "^13.13.0",
         "dotenv-cli": "^8.0.0",
         "jest": "^29.7.0",
-        "mocha": "^10.8.2",
+        "mocha": "^10.3.0",
         "nodemon": "^2.0.22",
-        "oclif": "^4.22.5",
-        "rimraf": "^5.0.10",
+        "oclif": "^3",
+        "rimraf": "^5.0.5",
         "run-script-os": "^1.1.6",
-        "shx": "^0.3.4",
-        "start-server-and-test": "^2.0.13",
-        "ts-jest": "^29.4.1",
-        "ts-node": "^10.9.2",
-        "tsc-watch": "^6.3.1",
-        "typescript": "~5.5.4"
+        "shx": "^0.3.3",
+        "start-server-and-test": "^2.0.3",
+        "ts-jest": "^29.1.2",
+        "ts-node": "^10.9.1",
+        "tsc-watch": "^6.0.4",
+        "typescript": "~5.5.2"
     }
 }
