added seed script

--- a/copilot._environment_.env.template
+++ b/copilot._environment_.env.template
@@ -31,3 +31,69 @@ LANGFUSE_HOST=https://cloud.langfuse.com
 AUTH_AUTH0_CLIENT_ID=$AUTH0_CLIENT_ID
 AUTH_AUTH0_CLIENT_SECRET=$AUTH0_CLIENT_SECRET
 AUTH_AUTH0_ISSUER=$AUTH0_ISSUER_BASE_URL
+
+# ==================================================
+# AAI DEFAULT CREDENTIALS (Auto-seeded by script)
+# ==================================================
+# These variables are automatically detected and seeded as credentials
+# by the scripts/seed-credentials.js script when the server starts
+
+# ===== AI/LLM PROVIDERS =====
+# OpenAI API Key
+AAI_DEFAULT_OPENAI_API_KEY=
+
+# Anthropic API Key (Claude)
+AAI_DEFAULT_ANTHROPHIC=
+
+# Groq API Key
+AAI_DEFAULT_GROQ=
+
+# DeepSeek API Key
+AAI_DEFAULT_DEEPSEEK=
+
+# Replicate API Key
+AAI_DEFAULT_REPLICATE=
+
+# ===== SEARCH PROVIDERS =====
+# Exa Search API Key
+AAI_DEFAULT_EXASEARCH=
+
+# SerpAPI Key
+AAI_DEFAULT_SERPAPI=
+
+# Google Custom Search API (requires both API key and Engine ID)
+AAI_DEFAULT_GOOGLE_SEARCH_API=
+AAI_DEFAULT_GOOGLE_SEARCH_API_ENGINE_ID=
+
+# ===== VECTOR DATABASES =====
+# Pinecone API Key
+AAI_DEFAULT_PINCONE=
+
+# ===== CLOUD PROVIDERS =====
+# AWS Bedrock Credentials
+AAI_DEFAULT_AWS_BEDROCK_ACCESS_KEY=
+AAI_DEFAULT_AWS_BEDROCK_SECRET_KEY=
+AAI_DEFAULT_AWS_BEDROCK_SESSION_TOKEN=
+
+# ===== DATABASES & STORAGE =====
+# Supabase Configuration
+AAI_DEFAULT_SUPABASE_URL=
+AAI_DEFAULT_SUPABASE_API=
+
+# Redis Cache Configuration
+AAI_DEFAULT_REDIS_HOST=
+AAI_DEFAULT_REDIS_PORT=
+AAI_DEFAULT_REDIS_USERNAME=
+AAI_DEFAULT_REDIS_PASSWORD=
+
+# ===== DEVELOPMENT TOOLS =====
+# GitHub API Token
+AAI_DEFAULT_GITHUB_TOKEN=
+
+# ==================================================
+# CREDENTIAL SEEDING CONFIGURATION
+# ==================================================
+# Optional: Specify user/organization for seeded credentials
+# If not provided or invalid UUIDs, credentials will be created with null values
+SEEDCREDENTIALS_USER_ID=
+SEEDCREDENTIALS_ORG_ID=
