--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,11 @@ daisy/preview
 
 **/swagger/yml
 **/swagger/md
+
+# Generated API documentation (auto-generated from OpenAPI specs)
+packages/docs/docs/api/*/*
+packages/docs/static/api/
+
+# Keep manually written API overview files
+!packages/docs/docs/api/index.mdx
+!packages/docs/docs/api/full-api-spec.mdx
