--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,10 @@ daisy/preview
 
 **/swagger/yml
 **/swagger/md
+ 
+# BWS Secure
+.env.secure.*
+requiredVars.env
+.env-debug.html
+
+bwsconfig.json
