--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "scripts": {
         "build": "dotenv -- turbo run build ",
         "build-force": "pnpm clean && turbo run build --force",
-        "dev": "dotenv -- turbo run dev dev-docker",
+        "dev": "pnpm secure-run \"turbo run dev dev-docker\"",
         "dev-docker": "docker-compose  -f \"./docker-compose.dev.yml\" up -d",
         "start": "dotenv -- npx turbo run start",
         "start:windows": "cd packages/server/bin && run start",
@@ -30,7 +30,7 @@
         "lint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
         "lint-fix": "pnpm lint --fix",
         "quick": "pretty-quick --staged",
-        "postinstall": "husky install",
+        "postinstall": "husky install && bash ./scripts/bws-secure/bws-installer.sh",
         "migration:generate": "turbo typeorm:migration-generate",
         "migration:run": "npx dotenv -- turbo typeorm:migration-run",
         "migration:show": "npx dotenv -- turbo typeorm:migration-show",
@@ -49,7 +49,11 @@
         "dev-inngest": "npx inngest-cli@latest dev -u http://localhost:3001/api/inngest --no-discovery > /dev/null 2>&1",
         "scripts:processCsvRows": "dotenv -- ts-node ./packages-answers/scripts/processCsvRows.ts",
         "scripts:generateCsv": "dotenv -- ts-node ./packages-answers/scripts/generateCsv.ts",
-        "scripts:initCsvRun": "dotenv -- ts-node ./packages-answers/scripts/initCsvRun.ts"
+        "scripts:initCsvRun": "dotenv -- ts-node ./packages-answers/scripts/initCsvRun.ts",
+        "secure-run": "node ./scripts/bws-secure/secureRun.js",
+        "list-projects": "node ./scripts/bws-secure/list-projects.js",
+        "bws-deps": "[ -d node_modules/dotenv ] && [ -d node_modules/dotenv-cli ] && [ -f node_modules/.bin/bws ] || npm install",
+        "bws-update": "rm -rf scripts/bws-secure && git clone git@github.com:last-rev-llc/bws-secure.git scripts/bws-secure && rm -rf scripts/bws-secure/.git && bash scripts/bws-secure/install.sh"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": "eslint --fix"
@@ -80,7 +84,11 @@
         "run-script-os": "^1.1.6",
         "turbo": "1.10.16",
         "typescript": "^5.4.5",
-        "cursor-tools": "latest"
+        "cursor-tools": "latest",
+        "dotenv": "^16.4.7",
+        "yargs": "^17.7.2",
+        "glob": "^11.0.1",
+        "axios": "^1.7.9"
     },
     "dependencies": {
         "@types/node-cron": "^3.0.11",
