--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
         "secure-run": "node ./scripts/bws-secure/secureRun.js",
         "list-projects": "node ./scripts/bws-secure/list-projects.js",
         "bws-deps": "[ -d node_modules/dotenv ] && [ -d node_modules/dotenv-cli ] && [ -f node_modules/.bin/bws ] || npm install",
-        "bws-update": "rm -rf scripts/bws-secure && git clone git@github.com:last-rev-llc/bws-secure.git scripts/bws-secure && rm -rf scripts/bws-secure/.git && bash scripts/bws-secure/install.sh"
+        "bws-update": "rm -rf scripts/bws-secure && git clone git@github.com:last-rev-llc/bws-secure.git scripts/bws-secure && rm -rf scripts/bws-secure/.git && bash scripts/bws-secure/install.sh",
+        "seed-credentials": "pnpm secure-run \"node ./scripts/seed-credentials/seed-credentials.js\""
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": "eslint --fix"
