--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,6 +39,8 @@
         "@svgr/webpack": "^8.1.0",
         "experimental-prisma-webpack-plugin": "workspace:*",
         "flagsmith": "^4.0.3",
+        "formidable": "^3.5.4",
+        "form-data": "^4.0.3",
         "handlebars": "^4.7.7",
         "inngest": "^1.8.0",
         "ioredis": "^5.3.2",
@@ -62,6 +64,7 @@
         "@next/bundle-analyzer": "^13.4.12",
         "@prisma/nextjs-monorepo-workaround-plugin": "^5.0.0",
         "@types/cors": "^2.8.18",
+        "@types/formidable": "^3.4.5",
         "@types/js-cookie": "^3.0.3",
         "@types/node": "^18.15.11",
         "@types/react": "^18.2.15",
