--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -59,7 +59,7 @@
         "email": "henryheng@flowiseai.com"
     },
     "engines": {
-        "node": ">=18.15.0 <19.0.0 || ^20"
+        "node": ">=18.15.0 <19.0.0 || >=20.0.0 <21.0.0 || >=22.0.0 <23.0.0"
     },
     "license": "SEE LICENSE IN LICENSE.md",
     "dependencies": {
@@ -133,6 +133,7 @@
         "sanitize-html": "^2.11.0",
         "socket.io": "^4.6.1",
         "sqlite3": "^5.1.6",
+        "slugify": "^1.6.6",
         "stripe": "^17.6.0",
         "turndown": "^7.2.0",
         "typeorm": "^0.3.6",
