--- a/scripts/seed-credentials/seed-credentials.env.template
+++ b/scripts/seed-credentials/seed-credentials.env.template
@@ -67,13 +67,12 @@ AAI_DEFAULT_CONTENTFUL_MANAGEMENT_ACCESS_TOKEN=""
 AAI_DEFAULT_CONFLUENCE_CLOUD_API_KEY=""
 AAI_DEFAULT_CONFLUENCE_CLOUD_API_USERNAME=""
 
-# --- Postgres Record Manager ---
-AAI_DEFAULT_POSTGRES_RECORDMANAGER_HOST=""
-AAI_DEFAULT_POSTGRES_RECORDMANAGER_PORT=""
-AAI_DEFAULT_POSTGRES_RECORDMANAGER_DATABASE=""
-AAI_DEFAULT_POSTGRES_RECORDMANAGER_USER=""
-AAI_DEFAULT_POSTGRES_RECORDMANAGER_PASSWORD=""
-AAI_DEFAULT_POSTGRES_RECORDMANAGER_TABLE_NAME=""
+# --- Postgres API Credential ---
+AAI_DEFAULT_POSTGRES_API_USER=""
+AAI_DEFAULT_POSTGRES_API_PASSWORD=""
+
+# --- Postgres URL Credential ---
+AAI_DEFAULT_POSTGRES_URL=""
 
 # --- Auto-detectable credentials (examples, uncomment and fill as needed) ---
 # For any credential in /credentials, you can add a variable like:
@@ -148,7 +147,6 @@ AAI_DEFAULT_POSTGRES_RECORDMANAGER_TABLE_NAME=""
 #AAI_DEFAULT_MILVUS_AUTH_API_KEY=""
 #AAI_DEFAULT_NVIDIA_NIM_API_KEY=""
 #AAI_DEFAULT_OAUTH_API_KEY=""
-#AAI_DEFAULT_POSTGRES_URL=""
 #AAI_DEFAULT_REDISCACHE_API_KEY=""
 #AAI_DEFAULT_REDISCACHEURL_API_KEY=""
 #AAI_DEFAULT_SFDC_API_KEY=""
