--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "@cypress/react18": "^2.0.0",
         "@types/express": "^4.17.13",
         "@typescript-eslint/typescript-estree": "^7.13.1",
+        "cursor-tools": "latest",
         "cypress": "^12.17.1",
         "dotenv-cli": "latest",
         "eslint": "^8.24.0",
@@ -79,8 +80,7 @@
         "rimraf": "^3.0.2",
         "run-script-os": "^1.1.6",
         "turbo": "1.10.16",
-        "typescript": "^5.4.5",
-        "cursor-tools": "latest"
+        "typescript": "^5.4.5"
     },
     "dependencies": {
         "@types/node-cron": "^3.0.11",
@@ -116,7 +116,7 @@
     "resolutions": {
         "@google/generative-ai": "^0.24.0",
         "@grpc/grpc-js": "^1.10.10",
-        "@langchain/core": "0.3.37",
+        "@langchain/core": "0.3.59",
         "@qdrant/openapi-typescript-fetch": "1.2.6",
         "openai": "4.96.0",
         "protobufjs": "7.4.0"
