--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -54,7 +54,7 @@
         "@langchain/google-genai": "0.2.12",
         "@langchain/google-vertexai": "^0.2.12",
         "@langchain/groq": "0.2.3",
-        "@langchain/langgraph": "^0.3.4",
+        "@langchain/langgraph": "0.0.22",
         "@langchain/mistralai": "^0.2.1",
         "@langchain/mongodb": "^0.1.0",
         "@langchain/ollama": "0.2.2",
@@ -75,6 +75,8 @@
         "@modelcontextprotocol/server-slack": "^2025.1.17",
         "@notionhq/client": "^2.2.8",
         "@opensearch-project/opensearch": "^1.2.0",
+        "@opentelemetry/api": "1.9.0",
+        "@opentelemetry/sdk-trace-base": "1.30.1",
         "@pinecone-database/pinecone": "4.0.0",
         "@qdrant/js-client-rest": "^1.9.0",
         "@stripe/agent-toolkit": "^0.1.20",
@@ -106,15 +108,20 @@
         "fast-json-patch": "^3.1.1",
         "form-data": "^4.0.0",
         "google-auth-library": "^9.4.0",
-        "graphql": "^16.6.0",
+        "graphql": "^16.8.1",
         "html-to-text": "^9.0.5",
         "ioredis": "^5.3.2",
         "jsdom": "^22.1.0",
         "jsonpointer": "^5.0.1",
         "jsonrepair": "^3.11.1",
-        "langchain": "^0.3.28",
-        "langfuse": "3.37.4",
-        "langfuse-langchain": "3.37.4",
+        "js-levenshtein": "^1.1.6",
+        "json-logic-js": "^2.0.2",
+        "json-to-pretty-yaml": "^1.2.2",
+        "jsonata": "^2.0.3",
+        "jsonschema": "^1.4.1",
+        "langchain": "^0.1.25",
+        "langfuse": "^3.12.1",
+        "langfuse-langchain": "^3.1.2",
         "langsmith": "0.1.6",
         "langwatch": "^0.1.1",
         "linkifyjs": "^4.1.1",
@@ -123,10 +130,11 @@
         "lunary": "^0.7.12",
         "mammoth": "^1.5.1",
         "meilisearch": "^0.41.0",
-        "moment": "^2.29.3",
+        "moment": "^2.29.4",
         "mongodb": "6.3.0",
         "mysql2": "^3.11.3",
         "neo4j-driver": "^5.26.0",
+        "node-cron": "^3.0.3",
         "node-fetch": "^2.6.11",
         "node-html-markdown": "^1.3.0",
         "notion-to-md": "^3.1.1",
@@ -150,8 +158,8 @@
         "ws": "^8.18.0",
         "youtube-data-mcp-server": "^1.0.16",
         "youtube-transcript": "^1.1.0",
-        "zod": "3.22.4",
-        "zod-to-json-schema": "^3.21.4"
+        "zod": "3.25.67",
+        "zod-to-json-schema": "3.24.5"
     },
     "devDependencies": {
         "@swc/core": "^1.3.99",
