--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -68,20 +68,20 @@
         "@contentful/rich-text-from-markdown": "^15.16.15",
         "@google-cloud/logging-winston": "^6.0.0",
         "@oclif/core": "4.0.7",
-        "@opentelemetry/api": "^1.3.0",
-        "@opentelemetry/auto-instrumentations-node": "^0.52.0",
-        "@opentelemetry/core": "1.27.0",
-        "@opentelemetry/exporter-metrics-otlp-grpc": "0.54.0",
-        "@opentelemetry/exporter-metrics-otlp-http": "0.54.0",
-        "@opentelemetry/exporter-metrics-otlp-proto": "0.54.0",
-        "@opentelemetry/exporter-trace-otlp-grpc": "0.54.0",
-        "@opentelemetry/exporter-trace-otlp-http": "0.54.0",
-        "@opentelemetry/exporter-trace-otlp-proto": "0.54.0",
-        "@opentelemetry/resources": "1.27.0",
-        "@opentelemetry/sdk-metrics": "1.27.0",
-        "@opentelemetry/sdk-node": "^0.54.0",
-        "@opentelemetry/sdk-trace-base": "1.27.0",
-        "@opentelemetry/semantic-conventions": "1.27.0",
+        "@opentelemetry/api": "1.9.0",
+        "@opentelemetry/auto-instrumentations-node": "0.60.1",
+        "@opentelemetry/core": "1.30.1",
+        "@opentelemetry/exporter-metrics-otlp-grpc": "0.57.2",
+        "@opentelemetry/exporter-metrics-otlp-http": "0.57.2",
+        "@opentelemetry/exporter-metrics-otlp-proto": "0.57.2",
+        "@opentelemetry/exporter-trace-otlp-grpc": "0.57.2",
+        "@opentelemetry/exporter-trace-otlp-http": "0.57.2",
+        "@opentelemetry/exporter-trace-otlp-proto": "0.57.2",
+        "@opentelemetry/resources": "1.30.1",
+        "@opentelemetry/sdk-metrics": "1.30.1",
+        "@opentelemetry/sdk-node": "0.57.2",
+        "@opentelemetry/sdk-trace-base": "1.30.1",
+        "@opentelemetry/semantic-conventions": "1.30.0",
         "@types/lodash": "^4.14.202",
         "@types/pdf-parse": "^1.1.4",
         "@types/uuid": "^9.0.7",
@@ -108,8 +108,8 @@
         "http-errors": "^2.0.0",
         "http-status-codes": "^2.3.0",
         "langchainhub": "^0.0.11",
-        "langfuse": "3.32.0",
-        "langfuse-core": "3.32.0",
+        "langfuse": "3.37.4",
+        "langfuse-core": "3.37.4",
         "lodash": "^4.17.21",
         "mailparser": "^3.7.2",
         "mammoth": "^1.9.0",
