--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
     "name": "flowise-components",
-    "version": "3.0.1",
+    "version": "3.0.0",
     "description": "Flowiseai Components",
     "main": "dist/src/index",
     "types": "dist/src/index.d.ts",
@@ -100,13 +100,13 @@
         "crypto-js": "^4.1.1",
         "css-what": "^6.1.0",
         "d3-dsv": "2",
-        "dotenv": "^16.0.0",
+        "dotenv": "^16.4.5",
         "epub2": "^3.0.2",
         "exa-js": "^1.0.12",
-        "express": "^4.17.3",
+        "express": "^4.21.1",
         "faiss-node": "^0.5.1",
         "fast-json-patch": "^3.1.1",
-        "form-data": "^4.0.0",
+        "form-data": "^4.0.1",
         "google-auth-library": "^9.4.0",
         "graphql": "^16.8.1",
         "html-to-text": "^9.0.5",
@@ -119,16 +119,16 @@
         "json-to-pretty-yaml": "^1.2.2",
         "jsonata": "^2.0.3",
         "jsonschema": "^1.4.1",
-        "langchain": "^0.1.25",
-        "langfuse": "^3.12.1",
-        "langfuse-langchain": "^3.1.2",
+        "langchain": "0.3.28",
+        "langfuse": "3.37.4",
+        "langfuse-langchain": "3.37.5",
         "langsmith": "0.1.6",
         "langwatch": "^0.1.1",
         "linkifyjs": "^4.1.1",
         "llamaindex": "^0.3.13",
         "lodash": "^4.17.21",
         "lunary": "^0.7.12",
-        "mammoth": "^1.5.1",
+        "mammoth": "^1.9.0",
         "meilisearch": "^0.41.0",
         "moment": "^2.29.4",
         "mongodb": "6.3.0",
@@ -140,10 +140,10 @@
         "notion-to-md": "^3.1.1",
         "object-hash": "^3.0.0",
         "ollama": "^0.5.11",
-        "openai": "^4.96.0",
+        "openai": "4.96.0",
         "papaparse": "^5.4.1",
         "pdf-parse": "^1.1.1",
-        "pdfjs-dist": "^3.7.107",
+        "pdfjs-dist": "^3.8.162",
         "pg": "^8.11.2",
         "playwright": "^1.35.0",
         "puppeteer": "^20.7.1",
@@ -152,7 +152,7 @@
         "replicate": "^0.31.1",
         "sanitize-filename": "^1.6.3",
         "srt-parser-2": "^1.2.3",
-        "typeorm": "^0.3.6",
+        "typeorm": "^0.3.17",
         "weaviate-ts-client": "^1.1.0",
         "winston": "^3.9.0",
         "ws": "^8.18.0",
@@ -165,7 +165,7 @@
         "@swc/core": "^1.3.99",
         "@types/crypto-js": "^4.1.1",
         "@types/gulp": "4.0.9",
-        "@types/lodash": "^4.14.202",
+        "@types/lodash": "^4.17.18",
         "@types/node-fetch": "2.6.2",
         "@types/object-hash": "^3.0.2",
         "@types/papaparse": "^5.3.15",
@@ -176,6 +176,6 @@
         "rimraf": "^5.0.5",
         "tsc-watch": "^6.0.4",
         "tslib": "^2.6.2",
-        "typescript": "^5.4.5"
+        "typescript": "~5.5.2"
     }
 }
