--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -82,7 +82,7 @@
         "@opentelemetry/sdk-node": "0.57.2",
         "@opentelemetry/sdk-trace-base": "1.30.1",
         "@opentelemetry/semantic-conventions": "1.30.0",
-        "@types/lodash": "^4.14.202",
+        "@types/lodash": "^4.17.18",
         "@types/pdf-parse": "^1.1.4",
         "@types/uuid": "^9.0.7",
         "async-mutex": "^0.4.0",
@@ -95,8 +95,8 @@
         "cors": "^2.8.5",
         "crypto-js": "^4.1.1",
         "csv-parse": "^5.6.0",
-        "dotenv": "^16.0.0",
-        "express": "^4.17.3",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.1",
         "express-basic-auth": "^1.2.1",
         "express-oauth2-jwt-bearer": "^1.6.0",
         "express-rate-limit": "^6.9.0",
@@ -113,18 +113,18 @@
         "lodash": "^4.17.21",
         "mailparser": "^3.7.2",
         "mammoth": "^1.9.0",
-        "moment": "^2.29.3",
+        "moment": "^2.29.4",
         "moment-timezone": "^0.5.34",
         "multer": "^1.4.5-lts.1",
         "multer-cloud-storage": "^4.0.0",
         "multer-s3": "^3.0.1",
         "mysql2": "^3.11.3",
         "nim-container-manager": "^1.0.4",
-        "openai": "^4.96.0",
+        "openai": "4.96.0",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
         "flowise-nim-container-manager": "^1.0.11",
-        "pg": "^8.11.1",
+        "pg": "^8.11.2",
         "posthog-node": "^3.5.0",
         "prom-client": "^15.1.3",
         "rate-limit-redis": "^4.2.0",
@@ -135,7 +135,7 @@
         "sqlite3": "^5.1.6",
         "stripe": "^17.6.0",
         "turndown": "^7.2.0",
-        "typeorm": "^0.3.6",
+        "typeorm": "^0.3.17",
         "uuid": "^9.0.1",
         "winston": "^3.9.0"
     },
@@ -144,7 +144,7 @@
         "@jest/globals": "^29.7.0",
         "@jest/types": "^29.6.3",
         "@types/content-disposition": "0.5.8",
-        "@types/cors": "^2.8.12",
+        "@types/cors": "^2.8.18",
         "@types/crypto-js": "^4.1.1",
         "@types/express": "^4.17.13",
         "@types/express-session": "^1.18.1",
@@ -158,7 +158,7 @@
         "@types/sanitize-html": "^2.9.5",
         "chai": "^4.3.4",
         "@types/turndown": "^5.0.5",
-        "concurrently": "^7.1.0",
+        "concurrently": "^7.6.0",
         "cross-env": "^7.0.3",
         "cypress": "^13.13.0",
         "dotenv-cli": "^8.0.0",
@@ -171,8 +171,8 @@
         "shx": "^0.3.3",
         "start-server-and-test": "^2.0.3",
         "ts-jest": "^29.1.2",
-        "ts-node": "^10.7.0",
+        "ts-node": "^10.9.1",
         "tsc-watch": "^6.0.4",
-        "typescript": "^5.4.5"
+        "typescript": "~5.5.2"
     }
 }
