--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -44,21 +44,22 @@
         "@google-cloud/storage": "^7.15.2",
         "@google/generative-ai": "^0.24.0",
         "@huggingface/inference": "^2.6.1",
-        "@langchain/anthropic": "0.3.22",
+        "@langchain/anthropic": "0.3.23",
         "@langchain/aws": "0.1.11",
         "@langchain/baidu-qianfan": "^0.1.0",
         "@langchain/cohere": "^0.3.4",
-        "@langchain/community": "^0.3.46",
+        "@langchain/community": "0.3.47",
         "@langchain/core": "0.3.59",
+        "@langchain/deepseek": "0.0.2",
         "@langchain/exa": "^0.1.0",
-        "@langchain/google-genai": "0.2.12",
-        "@langchain/google-vertexai": "^0.2.12",
+        "@langchain/google-genai": "0.2.13",
+        "@langchain/google-vertexai": "0.2.13",
         "@langchain/groq": "0.2.3",
         "@langchain/langgraph": "0.0.22",
         "@langchain/mistralai": "^0.2.1",
         "@langchain/mongodb": "^0.1.0",
-        "@langchain/ollama": "0.2.2",
-        "@langchain/openai": "0.5.13",
+        "@langchain/ollama": "0.2.3",
+        "@langchain/openai": "0.5.15",
         "@langchain/pinecone": "^0.2.0",
         "@langchain/qdrant": "^0.1.2",
         "@langchain/weaviate": "^0.2.0",
@@ -82,8 +83,6 @@
         "@stripe/agent-toolkit": "^0.1.20",
         "@supabase/supabase-js": "^2.29.0",
         "@tsmztech/mcp-server-salesforce": "^0.0.2",
-        "@types/js-yaml": "^4.0.5",
-        "@types/jsdom": "^21.1.1",
         "@upstash/redis": "1.22.1",
         "@upstash/vector": "1.1.5",
         "@zilliz/milvus2-sdk-node": "^2.2.24",
@@ -106,7 +105,7 @@
         "express": "^4.21.1",
         "faiss-node": "^0.5.1",
         "fast-json-patch": "^3.1.1",
-        "form-data": "^4.0.1",
+        "form-data": "^4.0.3",
         "google-auth-library": "^9.4.0",
         "graphql": "^16.8.1",
         "html-to-text": "^9.0.5",
@@ -120,8 +119,8 @@
         "jsonata": "^2.0.3",
         "jsonschema": "^1.4.1",
         "langchain": "0.3.28",
-        "langfuse": "3.37.4",
-        "langfuse-langchain": "3.37.5",
+        "langfuse": "3.37.6",
+        "langfuse-langchain": "3.37.6",
         "langsmith": "0.1.6",
         "langwatch": "^0.1.1",
         "linkifyjs": "^4.1.1",
@@ -165,12 +164,14 @@
         "@swc/core": "^1.3.99",
         "@types/crypto-js": "^4.1.1",
         "@types/gulp": "4.0.9",
-        "@types/lodash": "^4.17.18",
-        "@types/node-fetch": "2.6.2",
+        "@types/js-yaml": "^4.0.5",
+        "@types/jsdom": "^21.1.1",
+        "@types/lodash": "^4.17.19",
+        "@types/node-fetch": "2.6.12",
         "@types/object-hash": "^3.0.2",
-        "@types/papaparse": "^5.3.15",
+        "@types/papaparse": "^5.3.16",
         "@types/pg": "^8.10.2",
-        "@types/ws": "^8.5.3",
+        "@types/ws": "^8.18.1",
         "babel-register": "^6.26.0",
         "gulp": "^4.0.2",
         "rimraf": "^5.0.5",
