fix: update Dockerfiles to support build arguments for platform consistency
- Introduce ARG BUILDPLATFORM for platform specification in Dockerfiles
- Update base image references to use the build argument
- Ensure NODE_ENV is set correctly in the runner stage
- Adjust scripts directory copy path in the build stage

This change enhances the flexibility of the Docker build process and maintains consistency across different environments.

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,4 +1,6 @@
-FROM --platform=linux/amd64 node:20-alpine AS base
+# Build argument for platform (defaults to linux/amd64 for consistency with native deps)
+ARG BUILDPLATFORM=linux/amd64
+FROM --platform=$BUILDPLATFORM node:20-alpine AS base
 
 # This Dockerfile is optimized for Next.js standalone mode deployment
 # Make sure you update both files if copying to documentation!
