--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build stage
-FROM node:20-alpine AS build
+FROM --platform=${BUILDPLATFORM:-linux/amd64} node:20-alpine AS build
 
 USER root
 
@@ -10,7 +10,7 @@ ENV PUPPETEER_SKIP_DOWNLOAD=true
 RUN npm install -g flowise
 
 # Stage 2: Runtime stage
-FROM node:20-alpine
+FROM --platform=${TARGETPLATFORM:-linux/amd64} node:20-alpine
 
 # Install runtime dependencies
 RUN apk add --no-cache chromium git python3 py3-pip make g++ build-base cairo-dev pango-dev curl
