--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -25,6 +25,7 @@
         "prism-react-renderer": "^2.3.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
+        "react-markdown": "^9.0.1",
         "three": "^0.160.0",
         "troika-three-text": "^0.49.1"
     },
