--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -16,6 +16,6 @@
         "declaration": true,
         "module": "commonjs"
     },
-    "include": ["src", "nodes", "credentials", "nodes/vectorstores/AAIPostgres/scripts/install_pgvector_extension.js", "nodes/vectorstores/AAIPostgres/scripts/check_pgvector_status.js"],
+    "include": ["src", "nodes", "credentials"],
     "exclude": ["gulpfile.ts", "node_modules", "dist"]
 }
