--- a/copilot/flowise/manifest.yml
+++ b/copilot/flowise/manifest.yml
@@ -14,6 +14,7 @@ http:
     # You can specify a custom health check path. The default is "/".
     healthcheck: '/api/v1/ping'
     alias: ${COPILOT_ENVIRONMENT_NAME}.flowise.theanswer.ai
+    stickiness: true
 
 # Configuration for your containers and service.
 image:
