chore: update dependencies in package.json and pnpm-lock.yaml for improved compatibility and performance
- Add postcss@8.4.31, tsup@8.3.5, and jsforce@3.10.0 to package.json for enhanced functionality
- Remove react-scripts from packages/ui/package.json to streamline dependencies
- Upgrade tsup in packages-answers/ui/package.json to version 8.3.5 for better build performance
- Modify pnpm-lock.yaml to reflect updated dependency versions for consistency and stability

--- a/package.json
+++ b/package.json
@@ -131,7 +131,10 @@
             "esbuild": ">=0.25.0",
             "send": ">=0.19.0",
             "serve-static": ">=1.16.0",
-            "cookie": ">=0.7.0"
+            "cookie": ">=0.7.0",
+            "postcss": ">=8.4.31",
+            "tsup": ">=8.3.5",
+            "jsforce": "^3.10.0"
         }
     },
     "engines": {
