chore: update embed submodule to track a-main branch for merge
- Change submodule branch from ct/staging-pnpm-recursive-updates to a-main
- Update subproject commit reference for improved stability

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "packages/embed"]
 	path = packages/embed
 	url = https://github.com/the-answerai/chat-embed.git
-	branch = ct/staging-pnpm-recursive-updates
+	branch = a-main
