chore: update SonarCloud workflow for improved checkout process
- Upgrade actions/checkout from v3 to v4 for enhanced functionality
- Set fetch-depth to 0 for complete history retrieval during checkout

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -16,22 +16,10 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - name: Checkout code (with submodules)
-              uses: actions/checkout@v3
+            - name: Checkout code
+              uses: actions/checkout@v4
               with:
-                  submodules: recursive # ✅ important for git submodules
-
-            - name: Set up Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: '18' # or your project’s version
-                  cache: 'pnpm'
-
-            - name: Install dependencies with pnpm
-              run: pnpm install
-
-            - name: Run tests with coverage
-              run: pnpm test -- --coverage # Adjust to your test command
+                  fetch-depth: 0
 
             - name: Analyze with SonarCloud
               uses: SonarSource/sonarcloud-github-action@v2.2.0
@@ -41,6 +29,3 @@ jobs:
                   args: >
                       -Dsonar.projectKey=the-answerai_theanswer
                       -Dsonar.organization=the-answerai
-                      -Dsonar.sources=src
-                      -Dsonar.tests=tests
-                      -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
