--- a/.github/workflows/test_docker_build.yml
+++ b/.github/workflows/test_docker_build.yml
@@ -3,7 +3,8 @@ name: Test Docker Build
 on:
     push:
         branches:
-            - main
+            - production
+            - staging
 
     pull_request:
         branches:
