chore: update ESLint configuration and dependencies for improved linting and code quality
- Added new entries to .eslintignore to exclude specific directories and files from linting.
- Updated linting scripts in package.json to utilize turbo for better performance.
- Enhanced lint-staged configuration to include prettier formatting for various file types.
- Removed unnecessary ESLint disable comments from the codebase to maintain code cleanliness.

This commit aims to streamline the linting process and ensure that the codebase adheres to the latest standards, reducing false positives and improving overall code quality.

--- a/.eslintignore
+++ b/.eslintignore
@@ -25,3 +25,15 @@ packages/docs/openapi/**
 # Ignore compiled components package source files (they have complex inheritance patterns)
 packages/components/nodes/**/*.ts
 packages/components/src/**/*.ts
+
+# Ignore docs package (Docusaurus documentation site with its own build process)
+packages/docs/**/*
+
+# Ignore embed package (separate repo with its own linting)
+packages/embed/**/*
+
+# Ignore script files and utilities that are not critical for code quality
+packages-answers/scripts/**/*.ts
+packages-answers/db/prisma/scripts/**/*.ts
+packages-answers/db/prisma/seed.ts
+packages-answers/experimental-prisma-webpack-plugin/**/*.js
