--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
         "clean": "pnpm --filter \"./packages/**\" clean",
         "nuke": "pnpm --filter \"./packages/**\" nuke && rimraf node_modules .turbo",
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-        "lint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
+        "lint": "turbo run lint",
         "lint-fix": "pnpm lint --fix",
+        "lint-fix-all": "pnpm lint --fix && pnpm format",
         "quick": "pretty-quick --staged",
         "postinstall": "sh ./scripts/bws-secure/bws-installer.sh && husky install",
         "migration:generate": "turbo typeorm:migration-generate",
@@ -60,7 +61,11 @@
         "submodule:reset": "git submodule deinit -f --all && git submodule update --init --recursive"
     },
     "lint-staged": {
-        "*.{js,jsx,ts,tsx}": "eslint --fix"
+        "*.{js,jsx,ts,tsx}": [
+            "eslint --fix",
+            "prettier --write"
+        ],
+        "*.{md,json,yml,yaml}": "prettier --write"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.28.0",
@@ -75,11 +80,11 @@
         "dotenv": "^16.6.1",
         "dotenv-cli": "^8.0.0",
         "eslint": "^8.57.1",
-        "eslint-config-prettier": "^8.10.2",
+        "eslint-config-prettier": "^10.1.8",
         "eslint-config-react-app": "^7.0.1",
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-markdown": "^3.0.1",
-        "eslint-plugin-prettier": "^3.4.1",
+        "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-unused-imports": "^2.0.0",
@@ -88,8 +93,8 @@
         "kill-port": "^2.0.1",
         "knip": "^5.62.0",
         "lint-staged": "^15.2.0",
-        "prettier": "^2.8.8",
-        "pretty-quick": "^3.3.1",
+        "prettier": "^3.6.2",
+        "pretty-quick": "^4.2.2",
         "rimraf": "^6.0.1",
         "run-script-os": "^1.1.6",
         "turbo": "1.10.16",
