test: add playwright e2e testing setup

--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
         "db:studio": "pnpm secure-run \"pnpm db studio\"",
         "db:seed": "pnpm secure-run \"pnpm db db seed\"",
         "test": "pnpm turbo run test:auth",
-        "test:e2e": "pnpm cypress run",
+        "test:e2e": "pnpm --filter web test:e2e:dev",
+        "test:e2e:dev": "pnpm --filter web test:e2e:dev",
+        "test:e2e:debug": "pnpm --filter web test:e2e:debug",
+        "test:e2e:cypress": "pnpm cypress run",
         "test:cmp": "pnpm cypress run --component",
         "test:chatflows": "pnpm secure-run \"node ./scripts/testing-chatflows/testingChatflows.js\"",
         "logs": "docker compose logs -f",
