--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,15 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "test:e2e": "playwright test",
+        "test:e2e:dev": "playwright test --ui",
+        "test:e2e:headed": "playwright test --headed",
+        "test:e2e:debug": "playwright test --debug",
+        "test:e2e:auth": "playwright test auth.spec.ts",
+        "test:e2e:auth:headed": "playwright test auth.spec.ts --headed",
+        "test:e2e:auth:debug": "playwright test auth.spec.ts --debug",
+        "test:e2e:report": "playwright show-report e2e/playwright-report"
     },
     "dependencies": {
         "@auth0/auth0-react": "2.3.0",
@@ -60,6 +68,7 @@
     "devDependencies": {
         "@babel/core": "^7.28.0",
         "@next/bundle-analyzer": "^13.5.11",
+        "@playwright/test": "^1.54.2",
         "@prisma/nextjs-monorepo-workaround-plugin": "^5.22.0",
         "@types/cors": "^2.8.19",
         "@types/js-cookie": "^3.0.6",
@@ -68,6 +77,7 @@
         "@types/react-dom": "^18.3.7",
         "@types/uuid": "^9.0.8",
         "copy-webpack-plugin": "^11.0.0",
+        "dotenv": "^16.6.1",
         "eslint": "7.32.0",
         "eslint-config-custom": "workspace:*",
         "file-loader": "^6.2.0",
