feat: Enhance AWS Copilot deployment with containerization improvements and multi-environment support (AAI-554)
- Modernize web Dockerfile: Alpine → Debian Slim with BWS Integration Support and simplified build process
- Add entrypoint.sh for DATABASE_SECRET parsing and robust Prisma migration handling
- Update Next.js config to parse AWS RDS secrets from Copilot environment variables
- Add comprehensive 578-line deployment documentation with multiple deployment strategies
- Configure environment-specific infrastructure scaling: staging/prod/standalone variants
- Update Redis ElastiCache parameter group (redis7.x → redis7) and environment-specific sizing
- Enhance service manifests with proper resource allocation, domain aliases, and security groups
- Switch web healthcheck from Auth0 session to simple /healthcheck endpoint (May Revert this After Testing)
- Fix CloudFormation parameter references in frontend access policies

Infrastructure improvements:
- Database: Environment-specific Aurora scaling (staging: 0.5-8 ACU, prod: 1-16 ACU)
- Redis: Tiered instance sizing (staging: t3.micro, prod: r6g.large)
- Web service: Updated build args and environment-specific resource allocation
- Documentation: Complete deployment guide with same-account vs standalone strategies

--- a/copilot/environments/addons/redis-elasticache.yml
+++ b/copilot/environments/addons/redis-elasticache.yml
@@ -16,14 +16,20 @@ Parameters:
 
 Mappings:
     RedisEnvConfigurationMap:
+        # Default environments (same account)
         staging:
             'NodeType': 'cache.t3.micro'
             'NumCacheNodes': 1
-        production:
+        prod:
             'NodeType': 'cache.r6g.large'
-            'NumCacheNodes': 2
-        All:
+            'NumCacheNodes': 1
+
+        # Standalone environments (separate accounts)
+        staging-standalone:
             'NodeType': 'cache.t3.micro'
+            'NumCacheNodes': 1
+        prod-standalone:
+            'NodeType': 'cache.r6g.large'
             'NumCacheNodes': 1
 
 Resources:
@@ -64,7 +70,7 @@ Resources:
     RedisParameterGroup:
         Type: 'AWS::ElastiCache::ParameterGroup'
         Properties:
-            CacheParameterGroupFamily: 'redis7.x'
+            CacheParameterGroupFamily: 'redis7'
             Description: !Sub 'Parameter group for ${App}-${Env} Redis cluster'
             Properties:
                 maxmemory-policy: 'allkeys-lru'
