--- a/copilot/web/manifest.yml
+++ b/copilot/web/manifest.yml
@@ -10,12 +10,13 @@ type: Load Balanced Web Service
 http:
     # Requests to this path will be forwarded to your service.
     path: '/'
-    # Health check path for Next.js - checks Auth0 session endpoint
-    healthcheck: '/api/auth/session'
-    # Domain alias for the frontend
-    alias: ${COPILOT_ENVIRONMENT_NAME}.app.theanswer.ai
-    # Enable session stickiness for consistent user experience
-    stickiness: true
+    # Temporarily disabled for testing
+    # healthcheck: '/api/auth/session'
+    # Health check - dead simple endpoint that ALWAYS works
+    healthcheck: '/healthcheck'
+    # Domain aliases configured in environment-specific overrides below
+    # Disable stickiness for now
+    # stickiness: true
 
 # Configuration for your containers and service.
 image:
@@ -23,66 +24,95 @@ image:
     build:
         dockerfile: ./apps/web/Dockerfile
         context: .
+        args:
+            AUTH0_BASE_URL: ${AUTH0_BASE_URL}
+            AUTH0_SECRET: ${AUTH0_SECRET}
+            AUTH0_ISSUER_BASE_URL: ${AUTH0_ISSUER_BASE_URL}
+            AUTH0_CLIENT_ID: ${AUTH0_CLIENT_ID}
+            AUTH0_CLIENT_SECRET: ${AUTH0_CLIENT_SECRET}
+            AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
+            AUTH0_ORGANIZATION_ID: ${AUTH0_ORGANIZATION_ID}
+            AUTH0_DOMAIN: ${AUTH0_DOMAIN}
+            FLAGSMITH_ENVIRONMENT_ID: ${FLAGSMITH_ENVIRONMENT_ID}
+            WEB_AUTH0_SECRET: ${WEB_AUTH0_SECRET}
+            # DATABASE_URL: ${DATABASE_URL}
+            # BWS_ACCESS_TOKEN: ${BWS_ACCESS_TOKEN}
     # Port exposed through your container to route traffic to it.
     port: 3000
 
-cpu: 1024 # Number of CPU units for the task
-memory: 2048 # Amount of memory in MiB used by the task
-count: 2 # Number of tasks that should be running in your service
+# Resource configuration moved to environment-specific overrides below
 exec: true # Enable running commands in your container
 
 # Enable Service Connect for intra-environment traffic between services
 network:
     connect: true
+    vpc:
+        security_groups:
+            - from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-flowiseclusterSecurityGroup
+            - from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-RedisWorkloadSecurityGroup
+
+# Load environment-specific variables from file
+env_file: copilot.${COPILOT_ENVIRONMENT_NAME}.web.env
+
+# Database secret from AWS Secrets Manager
+secrets:
+    DATABASE_SECRET:
+        from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-flowiseclusterAuroraSecret
 
 # Optional fields for more advanced use-cases.
-#
 variables: # Pass environment variables as key value pairs.
     NODE_ENV: production
     PORT: '3000'
     HOSTNAME: '0.0.0.0'
     NEXT_TELEMETRY_DISABLED: '1'
-
-    # Database connection from backend service
-    DATABASE_TYPE: postgres
-    DATABASE_HOST:
-        from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-flowiseclusterEndpoint
-    DATABASE_PORT: '5432'
+    AUTH0_BASE_URL: ${AUTH0_BASE_URL}
 
     # Redis connection
     REDIS_URL:
         from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-RedisURL
 
-# Load environment-specific variables from file
-env_file: copilot.${COPILOT_ENVIRONMENT_NAME}.env
+# Environment-specific overrides
+environments:
+    # Default: Same account deployment (staging and prod share account)
+    staging:
+        cpu: 1024 # Number of CPU units for the task
+        memory: 2048 # Amount of memory in MiB used by the task
+        count: 1 # Number of tasks that should be running in your service
+        http:
+            alias:
+                # Service aliases for same account strategy
+                - web.staging.${CLIENT_DOMAIN}
+                - staging.${CLIENT_DOMAIN}
+    prod:
+        cpu: 2048 # Number of CPU units for the task
+        memory: 4096 # Amount of memory in MiB used by the task
+        count: 1 # Number of tasks that should be running in your service
+        http:
+            alias:
+                # Service aliases for same account strategy
+                - web.prod.${CLIENT_DOMAIN}
+                - prod.${CLIENT_DOMAIN}
 
-# Secrets from AWS Secrets Manager or Parameter Store
-secrets:
-    # Database credentials from Aurora cluster
-    DATABASE_SECRET:
-        from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-flowiseclusterAuroraSecret
-
-    # Auth0 secrets - should be stored in Parameter Store
-    AUTH0_SECRET:
-        from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-auth0-secret
-    AUTH0_CLIENT_SECRET:
-        from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-auth0-client-secret
-
-    # Stripe secret for billing
-    BILLING_STRIPE_SECRET_KEY:
-        from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-stripe-secret
+    # Standalone: Separate account deployment (independent accounts)
+    staging-standalone:
+        cpu: 1024 # Number of CPU units for the task
+        memory: 2048 # Amount of memory in MiB used by the task
+        count: 1 # Number of tasks that should be running in your service
+        http:
+            alias:
+                # Service aliases for standalone account strategy
+                - web.${CLIENT_DOMAIN}
+                - ${CLIENT_DOMAIN}
+    prod-standalone:
+        cpu: 2048 # Number of CPU units for the task
+        memory: 4096 # Amount of memory in MiB used by the task
+        count: 1 # Number of tasks that should be running in your service
+        http:
+            alias:
+                # Service aliases for standalone account strategy
+                - web.${CLIENT_DOMAIN}
+                - ${CLIENT_DOMAIN}
 
 # Configure deployment strategy
 deployment:
     rolling: 'default'
-
-# Environment-specific overrides
-environments:
-    staging:
-        count: 1
-        cpu: 512
-        memory: 1024
-    production:
-        count: 2
-        cpu: 2048
-        memory: 4096
