added menu logic for different roles

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,14 +7,16 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "test:e2e": "playwright test",
-        "test:e2e:dev": "playwright test --ui",
-        "test:e2e:headed": "playwright test --headed",
-        "test:e2e:debug": "playwright test --debug",
-        "test:e2e:auth": "playwright test auth.spec.ts",
-        "test:e2e:auth:headed": "playwright test auth.spec.ts --headed",
-        "test:e2e:auth:debug": "playwright test auth.spec.ts --debug",
-        "test:e2e:report": "playwright show-report e2e/playwright-report"
+        "test:e2e:setup": "npx playwright install --with-deps",
+        "test:e2e:check": "node scripts/check-playwright.js",
+        "test:e2e": "pnpm test:e2e:check && npx playwright test",
+        "test:e2e:dev": "pnpm test:e2e:check && npx playwright test --ui",
+        "test:e2e:headed": "pnpm test:e2e:check && npx playwright test --headed",
+        "test:e2e:debug": "pnpm test:e2e:check && npx playwright test --debug",
+        "test:e2e:auth": "pnpm test:e2e:check && npx playwright test auth.spec.ts",
+        "test:e2e:auth:headed": "pnpm test:e2e:check && npx playwright test auth.spec.ts --headed",
+        "test:e2e:auth:debug": "pnpm test:e2e:check && npx playwright test auth.spec.ts --debug",
+        "test:e2e:report": "npx playwright show-report e2e/playwright-report"
     },
     "dependencies": {
         "@auth0/auth0-react": "2.3.0",
