--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
         "db:studio": "pnpm secure-run \"pnpm db studio\"",
         "db:seed": "pnpm secure-run \"pnpm db db seed\"",
         "test": "pnpm turbo run test:auth",
+        "test:e2e:setup": "pnpm --filter web test:e2e:setup",
+        "test:e2e:check": "pnpm --filter web test:e2e:check",
         "test:e2e": "pnpm --filter web test:e2e:dev",
         "test:e2e:dev": "pnpm --filter web test:e2e:dev",
         "test:e2e:debug": "pnpm --filter web test:e2e:debug",
