refactor: Replace entrypoint.sh with entrypoint.js for improved Node.js integration
- Removed the entrypoint.sh script and replaced it with entrypoint.js to streamline the startup process of the web application.
- Updated the Dockerfile to use Node.js for executing the entrypoint, enhancing compatibility and performance.
- This change simplifies the entrypoint logic by leveraging Node.js directly, ensuring a more efficient application startup.

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -107,8 +107,7 @@ COPY --from=installer --chown=nextjs:nodejs /app/package.json ./package.json
 COPY --from=installer --chown=nextjs:nodejs /app/pnpm-lock.yaml ./pnpm-lock.yaml
 
 # Copy entrypoint script
-COPY --from=installer --chown=nextjs:nodejs /app/apps/web/entrypoint.sh ./entrypoint.sh
-RUN chmod +x ./entrypoint.sh
+COPY --from=installer --chown=nextjs:nodejs /app/apps/web/entrypoint.js ./entrypoint.js
 
 USER nextjs
 
@@ -117,5 +116,5 @@ EXPOSE 3000
 ENV PORT=3000
 ENV HOSTNAME="0.0.0.0"
 
-# Use entrypoint script to parse DATABASE_SECRET, run migration, and start server
-CMD ["./entrypoint.sh"]
+# Use Node.js entrypoint to parse DATABASE_SECRET, run migration, and start server
+CMD ["node", "entrypoint.js"]
