fix: Update copilot command and enhance migration strategy logging
- Changed the `copilot` command in package.json to suppress all warnings during execution.
- Updated logging messages in entrypoint.js to reflect a more robust migration strategy, emphasizing the preservation of existing Flowise tables and non-destructive schema push.
- Improved clarity of migration process by detailing potential outcomes and ensuring safe handling of database schema conflicts.

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
         "seed-credentials:write": "pnpm secure-run \"node ./scripts/seed-credentials/seed-credentials.js --auto-detect\"",
         "submodule:init": "git submodule update --init --recursive --force",
         "submodule:reset": "git submodule deinit -f --all && git submodule update --init --recursive",
-        "copilot": "BWS_SUPPRESS_MISSING=true pnpm secure-run copilot"
+        "copilot": "BWS_SUPPRESS_ALL=true pnpm secure-run copilot"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": "eslint --fix"
